cs144 lab5 blog

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,6 +24,12 @@ params:
   search:
     enabled: true
 
+markup:
+  defaultMarkdownHandler: goldmark
+  goldmark:
+    renderer:
+      unsafe: true
+
 outputs:
   home:
     - HTML
